--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.beanio</groupId>
+			<groupId>com.github.beanio</groupId>
 			<artifactId>beanio</artifactId>
-			<version>2.1.0</version>
+			<version>3.0.0.M1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
