--- a/descriptor.yml
+++ b/descriptor.yml
@@ -1,27 +1,11 @@
-# Descritivo
+############# Descritivo ###############
   
-# Propriedades obrigatórias: version e root
-# Propriedades opcionais: lombok
-
 # version:                                       - Versão do arquivo (Obrigatório)
 # root:                                          - Nó base do arquivo (Obrigatório)
 # lombok.getter:     true, false                 - Define se as classes serão anotadas com @Getter (Opcional)
 # lombok.setter:     true, false                 - Define se as classes serão anotadas com @Setter (Opcional)
 # lombok.toString:   true, false                 - Define se as classes serão anotadas com @ToString (Opcional)
 # element:           group, record, field        - Tipo do nó, sendo que group pode possuir filhos group e record; record pode ter filhos do tipo field; field não tem nós filho (Obrigatório)
-#____________________________________________
-#                  |       Primitivos        |
-#                  |_________________________|
-#                  | int, long, boolean,     |
-#                  | byte, short, char,      |   
-#                  | string, date, float,    |   - Para os element do tipo group e record, não devem ser aceitos os tipos primitivos, somente tipos complexos (Obrigatório)
-# type:            | double, biginteger, url |   - Para o element do tipo field só podem ser aceitos os tipos primitivos (Obrigatório)
-#                  | decimal, calendar, uuid |
-#                  |_________________________|
-#                  |       Complexos         |
-#                  |_________________________|
-#                  | className               |
-#__________________|_________________________|
 # property:                                      - Nome da propriedade dentro da classe em Java (Obrigatório)
 # name:                                          - Nome da propriedade do nó criado (Opcional)
 # maxLength:                                     - Tamanho máximo da linha (Opcional)
@@ -33,8 +17,40 @@
 # align:             rigth, left                 - Alinhar conteúdo à direita ou a esquerda do campo (Opcional)
 # rid:               true, false                 - Define se a propriedade da classe é identificador do tipo do registro, de modo que a aplicação consiga fazer o parser para o objeto apropriado. Default value = false (Opcional)
 # literal:                                       - Define o literal que será usado para identificar o tipo do registro, de modo que a aplicação consiga fazer o parser para o objeto apropriado caso o rid tenha o valor igual a true (Opcional)
-# collection:        Map, List, etc              - Define o tipo da Coleção de dados; caso o minOccurs e maxOccurs esteja definido um range de tamanho maior do que 1, o sistema deve automaticamente gerar a propriedade com o tipo Collection<ClassName> definido ou o Default. Default value = List (Opcional)
-  
+# collection:        Map, List, etc              - Define o tipo da Coleção de dados; caso o minOccurs e maxOccurs esteja definido um range de tamanho maior do que 1, o sistema deve automaticamente gerar a propriedade com o tipo Collection<ClassName> definido ou o Default. Default value = List (Opcional)  
+#____________________________________________
+#                  |       Primitivos        |
+#                  |_________________________|
+#                  | Integet, Long, Boolean, |
+#                  | Byte, Short, Char,      |   
+#                  | String, Date, Float,    |   - Para os element do tipo group e record, não devem ser aceitos os tipos primitivos, somente tipos complexos (Obrigatório)
+# type:            | Double, BigInteger, URL |   - Para o element do tipo field só podem ser aceitos os tipos primitivos (Obrigatório)
+#                  | Decimal, Calendar, UUID |
+#                  |_________________________|
+#                  |       Complexos         |
+#                  |_________________________|
+#                  | ClassName               |
+#__________________|_________________________|
+
+#_____________________________________________________
+#                  |                Date              |
+#                  |__________________________________|
+#                  |                                  |
+#                  |       dd     => Dia              |
+#                  |       MM     => Mês              |
+#                  |       yyyy   => Ano              |
+#                  |       hh     => Hora             |
+# format:          |       mm     => Minuto           | - Usados para formatar a entrada e a saída de dados nos arquivo de acordo com o tipo primitivo declarado
+#                  |       ss     => Segundo          |
+#                  |                                  |
+#                  | Exemplos:                        |
+#                  | ddMMyyyy => 31012021             |
+#                  | yyyyMMdd => 20210131             |
+#                  | dd/MM/yyyy => 31/01/2021         |
+#                  | yyyyMMddhhmmss => 20210131103412 |
+#__________________|__________________________________|            
+
+
 # Propriedade disponíveis por element
 # group:                                         - type, property, name, minOccurs, maxOccurs, collection
 # record:                                        - type, property, name, minOccurs, maxOccurs, maxLength, collection
